Update production variable placeholders

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DB_USER_ADMIN=postgres
 DB_USER_MIGRATOR=dugout_migrator
 DB_USER_APP=dugout_app
 
-PROD_HOST_IP=xxx.xxx.xx.xxx
-PROD_SSH_USER=dugout_user
+PROD_HOST_IP=...
+PROD_SSH_USER=...
 
 # passwords intentionally omitted, use ~/.pgpass
