Scaffold dev & test databases
Several changes related to database scaffolding.
- Makefile, README, and .env.example are all lightly edited for variable
  naming consistency and to make onboarding clearer.
- db/boostrap.sql is added for creating databases, roles, and
  permissions.
- sqlc.yaml defined at repo root
- Trivial migrations and queries defined for end-to-end sanity test
- Project file structure adjusted to include cmd/, internal/, and db/
  rather than all living at repo root

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,14 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_SSLMODE=disable
 
-DB_NAME=dugout
+DB_NAME=dugout_dev
 DB_NAME_TEST=dugout_test
 
-DB_USER_ADMIN=postgres
+DB_USER_ADMIN=your_local_pg_admin_role
 DB_USER_MIGRATOR=dugout_migrator
 DB_USER_APP=dugout_app
 
-PROD_HOST_IP=...
-PROD_SSH_USER=...
+PRODUCTION_HOST_IP=...
+PRODUCTION_SSH_USER=...
 
 # passwords intentionally omitted, use ~/.pgpass
