Update 'db' to 'database'
This changes the use of 'db' to 'database', both in the project file
structure and in the package name. This requires changes to Makefile
(which knows about the migrations and bootstrap script locations), to
two different directories, and to the sqlc.yaml file. The other changes
are accomplished by deleting the old dirs and files, and re-running
'make db/gen'. Perhaps a silly change, but seems to be more consistent
with other projects I see online.

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -3,12 +3,12 @@ version: "2"
 sql:
   - engine: postgresql
     schema:
-      - "db/migrations/*.sql"
+      - "database/migrations/*.sql"
     queries:
-      - "db/queries/*.sql"
+      - "database/queries/*.sql"
     gen:
       go:
-        package: "db"
-        out: "internal/db"
+        package: "database"
+        out: "internal/database"
         sql_package: "pgx/v5"
         emit_json_tags: true
