--- a/mise.toml
+++ b/mise.toml
@@ -1,2 +1,4 @@
 [tools]
-go = "1.25.6"
+go = '1.25.6'
+"go:honnef.co/go/tools/cmd/staticcheck" = 'v0.6.0'
+"go:golang.org/x/vuln/cmd/govulncheck" = 'v1.1.4'
