--- a/scripts/build
+++ b/scripts/build
@@ -47,7 +47,9 @@ case "$target" in
 native)
   info "Building native binary..."
 
-  tmp="${TMPDIR:-/tmp}/bin"
+  tmp_root="${TMPDIR:-/tmp}"
+  tmp_root="${tmp_root%/}"
+  tmp="$tmp_root/bin"
 
   mkdir -p "$tmp"
   go build \
@@ -56,12 +58,14 @@ native)
 
   ok "writing to $tmp/$bin_name"
   ok "... build complete."
-  printf '\n'
+  # printf '\n'
   ;;
 linux_amd64)
   info "Building linux_amd64 binary..."
 
-  tmp="${TMPDIR:-/tmp}/bin/linux_amd64"
+  tmp_root="${TMPDIR:-/tmp}"
+  tmp_root="${tmp_root%/}"
+  tmp="$tmp_root/bin/linux_amd64"
 
   mkdir -p "$tmp"
   GOOS=linux GOARCH=amd64 \
@@ -73,7 +77,7 @@ linux_amd64)
 
   ok "writing to $tmp/$bin_name"
   ok "... build complete."
-  printf '\n'
+  # printf '\n'
   ;;
 *)
   usage
