Add scripts - run, paths.sh, project.sh
Unifies project paths (root_dir, tmp_dir, bin_dir, etc.) in two new lib
shell scripts.

Adds scripts/run with modes default, test, live (air), and debug.

Adds .air.toml for configuration rather than passing as args each time a
script calls air.

--- a/scripts/build
+++ b/scripts/build
@@ -5,20 +5,24 @@
 
 set -euo pipefail
 
-SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-source "$SCRIPT_DIR/lib/lib.sh"
+ROOT_DIR="$(cd -- "$(dirname -- "${BASH_SOURCE[0]}")/.." && pwd)"
+
+source "$ROOT_DIR/scripts/lib/lib.sh"
+source "$ROOT_DIR/scripts/lib/project.sh"
+source "$ROOT_DIR/scripts/lib/paths.sh"
 
 usage() {
-  cat >&2 <<'EOF'
+  cat >&2 <<EOF
 Usage:
-  scripts/build [target] [module]
+  scripts/build [target]
 
 Targets:
   native         native build (default)
   linux_amd64    linux build
 
-Module path:
-  ./cmd/dugout   (default)
+Builds:
+  cmd:  $(realpath "$CMD_DIR" 2>/dev/null || echo "$CMD_DIR")
+  out:  $BIN_PATH
 EOF
 }
 
@@ -30,57 +34,45 @@ case "${1:-}" in
 esac
 
 need_cmd go
+require_dir "$CMD_DIR" "Refusing: cmd directory not found: $CMD_DIR"
 
 target="${1:-native}"
-module="${2:-./cmd/dugout}"
-module=${module%/}
 
-require_dir "$module" "Refusing: module directory not found: $module"
-
-bin_name=$(basename "$module")
-
-if [[ "$bin_name" == "." ]]; then
-  die "Refusing: cannot use '.' as binary name."
-fi
+out_dir=""
+out_path=""
 
 case "$target" in
 native)
-  info "Building native binary..."
-
-  tmp_root="${TMPDIR:-/tmp}"
-  tmp_root="${tmp_root%/}"
-  tmp="$tmp_root/bin"
-
-  mkdir -p "$tmp"
-  go build \
-    -o="$tmp/$bin_name" \
-    "$module"
-
-  ok "writing to $tmp/$bin_name"
-  ok "... build complete."
-  # printf '\n'
+  out_dir="$BIN_DIR"
+  out_path="$BIN_PATH"
   ;;
 linux_amd64)
-  info "Building linux_amd64 binary..."
-
-  tmp_root="${TMPDIR:-/tmp}"
-  tmp_root="${tmp_root%/}"
-  tmp="$tmp_root/bin/linux_amd64"
-
-  mkdir -p "$tmp"
-  GOOS=linux GOARCH=amd64 \
-    go build \
-    -trimpath \
-    -ldflags='-s -w' \
-    -o="$tmp/$bin_name" \
-    "$module"
-
-  ok "writing to $tmp/$bin_name"
-  ok "... build complete."
-  # printf '\n'
+  out_dir="$BIN_DIR/linux_amd64"
+  out_path="$out_dir/$BINARY_NAME"
   ;;
 *)
   usage
   die "Unknown target: $target"
   ;;
 esac
+
+mkdir -p "$out_dir"
+
+case "$target" in
+native)
+  info "Building native binary..."
+  go build -o "$out_path" "$CMD_DIR"
+  ;;
+linux_amd64)
+  info "Building linux_amd64 binary..."
+  GOOS=linux GOARCH=amd64 \
+    go build \
+    -trimpath \
+    -ldflags='-s -w' \
+    -o "$out_path" \
+    "$CMD_DIR"
+  ;;
+esac
+
+ok "writing to $out_path"
+ok "... build complete."
