--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,7 @@
 [tools]
 go = '1.25.6'
+air = '1.64.5'
 
-"go:honnef.co/go/tools/cmd/staticcheck" = 'v0.6.0'
-"go:golang.org/x/vuln/cmd/govulncheck" = 'v1.1.4'
-"go:github.com/oligot/go-mod-upgrade" = 'v0.12.0'
+"go:honnef.co/go/tools/cmd/staticcheck" = '0.6.0'
+"go:golang.org/x/vuln/cmd/govulncheck" = '1.1.4'
+"go:github.com/oligot/go-mod-upgrade" = '0.12.0'
