Update ci.yml and mise.toml
Mise is updated to pin just.

ci.yml is updated to run mise for installing all tools, and 'just ci'
for the CI check.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v5
+      - uses: jdx/mise-action@v3
         with:
-          go-version-file: go.mod
-          cache: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: make ci
+      - run: just ci
