--- a/mise.toml
+++ b/mise.toml
@@ -2,6 +2,7 @@
 go = '1.25.6'
 air = '1.64.5'
 gh = '2.73.0'
+just = '1.46.0'
 
 "go:honnef.co/go/tools/cmd/staticcheck" = '0.6.0'
 "go:golang.org/x/vuln/cmd/govulncheck" = '1.1.4'
